--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.2",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+   
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -29,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-easy-emoji": "^1.8.1",
     "react-headroom": "^3.2.1",
+    "react-icons": "^5.2.1",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
     "sass": "^1.68.0",
